[package]
name = "amqp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bigerror = { git = "https://github.com/knox-networks/bigerror", rev = "5b4e986", features = ["spantrace"] }
futures-util = "0.3.21"
lapin = { version = "2.3.1", features = ["native-tls"] }
thiserror = "1.0.37"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.10"
tracing = "0.1"
